<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPScanner</string>
    <string name="action_settings">Settings</string>
    <string name="action_man_nmap">man nmap</string>
    <string name="action_show_ip">Show IP</string>
    <string name="action_about">About</string>
    <string name="run_button">Run</string>
    <string name="run_sudo_button">Run sudo</string>
    <string name="hostname_hint">Hostname or IP Address</string>
    <string name="argument_hint">Arguments</string>
    <string name="title_activity_man">ManActivity</string>
    <string name="beginner_explanation">&#8226; Type a hostname or IP address in the input box below.\n&#8226; Tap the buttons below the input box to enable common arguments.\n&#8226; Some arguments require root, and in these cases you should use "Run sudo" instead of "Run". Note that if your device is not properly rooted, the command may fail silently (the command will be displayed, but no output will be displayed).\n&#8226; After clicking run, the result of running Nmap will be displayed below.\n&#8226; Explanations of all Nmap arguments can be found in the manpage provided in the options menu.</string>
    <string name="advanced_explanation">&#8226; Type a hostname or IP address followed by all arguments you wish to pass to Nmap below. Note the hostname or IP address must come first.\n&#8226; Some arguments require root, and in these cases you should use "Run sudo" instead of "Run". Note that if your device is not properly rooted, the command may fail silently (the command will be displayed, but no output will be displayed).\n&#8226; After clicking run, the result of running Nmap will be displayed below.\n&#8226; Explanations of all Nmap arguments can be found in the manpage provided in the options menu.</string>

</resources>
